doc: add volume for caddyfile

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
     volumes:
       - tailscale-whoami-state:/var/lib/tailscale # Persist the tailscale state directory
       - caddy-whoami-config:/root/.config/caddy   # Persist caddy autosave config
+      - ./caddy:/etc/caddy                        # Persist caddyfile
     environment:
       - TS_HOSTNAME=tailscale-example 	# Hostname you want this instance to have on the tailscale network
       - TS_TAILNET=tailnet-XXXX         # Your tailnet name without the .ts.net suffix!
